--- a/locales/es.json
+++ b/locales/es.json
@@ -38,7 +38,7 @@
     "login": "Iniciar Sesión/Registrarse",
     "logout": "Cerrar Sesión",
     "configAdmin": "Config. de Calificación",
-    "userAdmin": "Admin. de Usuarios"
+    "userAdmin": "Admin. de Usuarios",
     "nav.configAdmin": "Config. de Calificación"
   },
   "indexPage": {
