--- a/locales/zh.json
+++ b/locales/zh.json
@@ -27,7 +27,30 @@
     "pin": "置顶",
     "unpin": "取消置顶",
     "image": "图片",
-    "cover": "封面"
+    "cover": "封面",
+    "loadingDetails": "正在加载评分详情...",
+    "noImage": "无图片",
+    "cigarImageAlt": "雪茄图片",
+    "copied": "已复制!",
+    "copyFailed": "复制失败",
+    "saving": "保存中...",
+    "loadingOptions": "正在加载选项...",
+    "backToHome": "返回主页",
+    "backToHomeAndLogin": "返回主页并登录",
+    "waitingInit": "正在等待初始化...",
+    "querying": "查询中...",
+    "assigningRole": "正在分配角色...",
+    "deleting": "删除中...",
+    "processing": "处理中...",
+    "backToCommunity": "返回社区",
+    "unknown": "未知",
+    "noTitle": "无标题",
+    "noReview": "未填写文字评价。",
+    "invalidDate": "无效日期",
+    "unknownDate": "未知日期",
+    "by": "由",
+    "noPublicRatings": "还没有公开的评分。",
+    "noMatch": "没有找到匹配项。"
   },
   "nav": {
     "title": "Pistacho评分",
@@ -38,7 +61,8 @@
     "login": "登录/注册",
     "logout": "退出",
     "configAdmin": "评分配置",
-    "userAdmin": "用户管理" 
+    "userAdmin": "用户管理",
+    "loggedIn": "已登录"
   },
   "indexPage": {
     "searchPlaceholder": "搜索雪茄名称, 产地, 尺寸, 点评, 用户...",
@@ -98,7 +122,8 @@
     "nameRequired": "请填写雪茄名称。",
     "loadingEdit": "正在加载点评 {{id}}...",
     "editLoadFailed": "加载点评失败: {{msg}}",
-    "editLoaded": "已加载点评 {{id}} (编辑模式)"
+    "editLoaded": "已加载点评 {{id}} (编辑模式)",
+    "setCover": "设为封面"
   },
   "historyPage": {
     "title": "我的评分",
@@ -127,7 +152,7 @@
     "sessionStoreFailed": "无法保存会话数据以查看详情。"
   },
   "resultsPage": {
-    "title": "雪茄品鉴 - 点评报告",
+    "pageTitle": "雪茄品鉴 - 点评报告",
     "by": "点评来自:",
     "loading": "加载中...",
     "size": "尺寸",
@@ -162,10 +187,11 @@
       "part3": "感受到的主要风味包括：<strong class=\"font-semibold\">{{flavors}}</strong>。",
       "part4": "综合来看，本次基于Pistacho Cigar Rating System（Pistacho雪茄评分）的最终评级为<strong class=\"font-semibold text-indigo-600\">“{{grade}} - {{gradeName}}”</strong>。Pistacho品分等级从高到低为{{hierarchy}}。",
       "noObservations": "(未记录详细评分选项)",
-      "noData": "无法生成综合评价 (缺少原始评分数据)。"
+      "observation": "{{criterion}}: {{option}}",
+      "noNarrativeData": "无法生成综合评价 (缺少数据)。"
     },
     "summary": {
-      "noData": "无法生成评分详情汇总 (缺少原始评分数据)。",
+      "noSummaryData": "无法生成评分详情汇总 (缺少数据)。",
       "noItems": "(无评分项)"
     },
     "shareCard": {
@@ -174,9 +200,11 @@
       "qrError": "QR Code 容器或库未找到, 或 ratingId 丢失。",
       "generating": "开始自动生成分享图...",
       "generateFailed": "自动生成或添加分享图片失败:",
-      "shareImage": "分享图片",
+      "shareImageAlt": "分享图片",
       "shareThumb": "分享缩略图"
-    }
+    },
+    "scoreCalculationFailed": "分数计算失败，无法显示。",
+    "narrativeGenFailed": "无法生成综合评价 (分数计算失败)。"
   },
    "errors": {
       "initFailed": "页面加载初始化出错: {{msg}}",
@@ -199,12 +227,80 @@
       "deleteFailed": "删除失败: {{msg}}",
       "emptyConfigDownload": "无法下载空的配置。",
       "invalidJSONFormat": "上传的文件不是有效的配置 JSON。",
-      "fileParseFailed": "解析上传的文件失败: {{msg}}"
-   }
-   "errors": {
-      // ... 其他错误 ...
+      "fileParseFailed": "解析上传的文件失败: {{msg}}",
+      "invalidSessionData": "存储的评分数据格式无效。",
+      "permissionDenied": "权限不足。",
+      "permissionInsufficientSuperAdmin": "需要 Super Admin 权限才能访问此页面。您当前的权限是 {{role}}。",
+      "emailRequired": "请输入用户邮箱。",
+      "queryFailed": "查询失败",
+      "assignFailed": "分配角色失败。",
+      "notLoggedIn": "未登录",
+      "sessionExpiredGeneric": "会话已过期或无效。",
+      "requestFailed": "请求失败 (状态 {{status}})",
+      "sessionExpiredWrite": "会话已过期或无效，无法执行写入操作。",
+      "sessionExpiredRead": "会话已过期或无效 (状态 {{status}})，无法读取数据。",
+      "loginRequiredForPage": "需要登录才能访问此页面。",
+      "permissionDeniedAdmin": "权限不足，需要 Admin 或 Super Admin 权限。",
+      "permissionInsufficient": "权限不足。您当前的权限是 {{role}}。",
+      "noNarrativeData": "无法生成综合评价 (缺少数据)。",
+      "noSummaryData": "无法生成评分详情汇总 (缺少数据)。",
       "scoreCalculationFailed": "分数计算失败，无法显示。",
-      "narrativeGenFailed": "无法生成综合评价 (分数计算失败)。",
-      "invalidSessionData": "存储的评分数据格式无效。"
+      "narrativeGenFailed": "无法生成综合评价 (分数计算失败)。"
+   },
+   "configPage": {
+     "title": "雪茄品鉴配置管理",
+     "description": "管理评分标准，所有更改在发布后将实时同步到主应用。",
+     "checkingAuth": "正在检查权限...",
+     "profileManagement": "配置方案管理",
+     "currentProfile": "当前加载:",
+     "selectProfile": "选择方案:",
+     "liveProfile": "Live (latest)",
+     "saveAs": "另存为",
+     "importExport": "导入 / 导出",
+     "uploadJSON": "从文件上传 (JSON):",
+     "uploadAndSave": "上传并另存为",
+     "downloadJSON": "下载当前配置 (JSON):",
+     "downloadEditorContent": "下载编辑器内容",
+     "appInfo": "应用基本信息",
+     "appTitle": "应用标题",
+     "appDescription": "应用描述",
+     "category": "类别",
+     "categoryName": "类别名称",
+     "criteria": "标准",
+     "addCriterion": "添加标准",
+     "weight": "权重",
+     "options": "选项",
+     "addOption": "添加选项",
+     "scorePct": "得分百分比",
+     "addCategory": "添加类别",
+     "saveChanges": "保存更改到方案",
+     "publishToLive": "发布到 Live (latest)",
+     "promptNewName": "请输入新配置方案的名称:",
+     "confirmDeleteProfile": "确定要删除配置方案 '{{id}}' 吗？",
+     "saveSuccess": "配置方案 '{{id}}' 保存成功。",
+     "deleteSuccess": "配置方案 '{{id}}' 已删除。",
+     "currentRole": "当前角色: {{role}}",
+     "jsonLoaded": "JSON 文件已加载到编辑器。请记得保存或发布。"
+   },
+   "rolePage": {
+     "pageTitle": "用户角色管理 - Super Admin",
+     "loadingAuth": "正在加载和验证身份...",
+     "title": "用户角色管理 (Super Admin)",
+     "currentUser": "当前用户: {{email}} ({{role}})",
+     "queryAndSet": "查询与设置用户角色",
+     "userEmail": "用户 Email:",
+     "emailPlaceholder": "输入要查询或修改的用户的邮箱地址",
+     "queryRole": "查询角色",
+     "promptQuery": "输入邮箱并点击查询以查看或修改用户角色。",
+     "currentRoleLabel": "当前角色",
+     "setNewRole": "设置新角色",
+     "confirmAssign": "确认分配",
+     "assignSuccess": "角色分配成功！",
+     "assignSuccessDetail": "用户 {{userId}} 的新角色为 {{role}}。"
+   },
+   "roles": {
+     "general": "普通用户",
+     "admin": "管理员",
+     "super_admin": "超级管理员"
    }
 }
