--- a/locales/zh.json
+++ b/locales/zh.json
@@ -50,7 +50,13 @@
     "unknownDate": "未知日期",
     "by": "由",
     "noPublicRatings": "还没有公开的评分。",
-    "noMatch": "没有找到匹配项。"
+    "noMatch": "没有找到匹配项。",
+    "deleteCategory": "删除类别",
+    "description": "描述",
+    "name": "名称",
+    "deleteOption": "删除选项",
+    "unrated": "未评级",
+    "unnamedCigar": "未命名雪茄"
   },
   "nav": {
     "title": "Pistacho评分",
@@ -206,101 +212,280 @@
     "scoreCalculationFailed": "分数计算失败，无法显示。",
     "narrativeGenFailed": "无法生成综合评价 (分数计算失败)。"
   },
-   "errors": {
-      "initFailed": "页面加载初始化出错: {{msg}}",
-      "loginFailed": "登录失败: {{message}}",
-      "authCallbackFailed": "认证回调失败 (状态 {{status}})",
-      "loadRatingFailed": "加载评分失败 (状态 {{status}})",
-      "noRatingDataFound": "在 Session Storage 中未找到评分数据。",
-      "missingEssentialData": "评分数据不完整，无法显示报告。",
-      "pageLoadError": "页面加载出错",
-      "loadProfileListFailed": "加载配置列表失败: {{msg}}",
-      "loadProfileFailed": "加载配置 '{{id}}' 失败: {{msg}}",
-      "saveFailedNoMsg": "保存失败",
-      "notADraft": "该评分已保存，无法重复保存。",
-      "emptyConfig": "无法保存空的配置。",
-      "operationFailed": "操作失败: {{msg}}",
-      "cannotNameLatest": "不能将配置命名为 'latest'。",
-      "confirmDeleteProfile": "确定要删除配置方案 '{{id}}' 吗？",
-      "deleting": "删除中...",
-      "deleteSuccess": "配置方案 '{{id}}' 已删除。",
-      "deleteFailed": "删除失败: {{msg}}",
-      "emptyConfigDownload": "无法下载空的配置。",
-      "invalidJSONFormat": "上传的文件不是有效的配置 JSON。",
-      "fileParseFailed": "解析上传的文件失败: {{msg}}",
-      "invalidSessionData": "存储的评分数据格式无效。",
-      "permissionDenied": "权限不足。",
-      "permissionInsufficientSuperAdmin": "需要 Super Admin 权限才能访问此页面。您当前的权限是 {{role}}。",
-      "emailRequired": "请输入用户邮箱。",
-      "queryFailed": "查询失败",
-      "assignFailed": "分配角色失败。",
-      "notLoggedIn": "未登录",
-      "sessionExpiredGeneric": "会话已过期或无效。",
-      "requestFailed": "请求失败 (状态 {{status}})",
-      "sessionExpiredWrite": "会话已过期或无效，无法执行写入操作。",
-      "sessionExpiredRead": "会话已过期或无效 (状态 {{status}})，无法读取数据。",
-      "loginRequiredForPage": "需要登录才能访问此页面。",
-      "permissionDeniedAdmin": "权限不足，需要 Admin 或 Super Admin 权限。",
-      "permissionInsufficient": "权限不足。您当前的权限是 {{role}}。",
-      "noNarrativeData": "无法生成综合评价 (缺少数据)。",
-      "noSummaryData": "无法生成评分详情汇总 (缺少数据)。",
-      "scoreCalculationFailed": "分数计算失败，无法显示。",
-      "narrativeGenFailed": "无法生成综合评价 (分数计算失败)。"
-   },
-   "configPage": {
-     "title": "雪茄品鉴配置管理",
-     "description": "管理评分标准，所有更改在发布后将实时同步到主应用。",
-     "checkingAuth": "正在检查权限...",
-     "profileManagement": "配置方案管理",
-     "currentProfile": "当前加载:",
-     "selectProfile": "选择方案:",
-     "liveProfile": "Live (latest)",
-     "saveAs": "另存为",
-     "importExport": "导入 / 导出",
-     "uploadJSON": "从文件上传 (JSON):",
-     "uploadAndSave": "上传并另存为",
-     "downloadJSON": "下载当前配置 (JSON):",
-     "downloadEditorContent": "下载编辑器内容",
-     "appInfo": "应用基本信息",
-     "appTitle": "应用标题",
-     "appDescription": "应用描述",
-     "category": "类别",
-     "categoryName": "类别名称",
-     "criteria": "标准",
-     "addCriterion": "添加标准",
-     "weight": "权重",
-     "options": "选项",
-     "addOption": "添加选项",
-     "scorePct": "得分百分比",
-     "addCategory": "添加类别",
-     "saveChanges": "保存更改到方案",
-     "publishToLive": "发布到 Live (latest)",
-     "promptNewName": "请输入新配置方案的名称:",
-     "confirmDeleteProfile": "确定要删除配置方案 '{{id}}' 吗？",
-     "saveSuccess": "配置方案 '{{id}}' 保存成功。",
-     "deleteSuccess": "配置方案 '{{id}}' 已删除。",
-     "currentRole": "当前角色: {{role}}",
-     "jsonLoaded": "JSON 文件已加载到编辑器。请记得保存或发布。"
-   },
-   "rolePage": {
-     "pageTitle": "用户角色管理 - Super Admin",
-     "loadingAuth": "正在加载和验证身份...",
-     "title": "用户角色管理 (Super Admin)",
-     "currentUser": "当前用户: {{email}} ({{role}})",
-     "queryAndSet": "查询与设置用户角色",
-     "userEmail": "用户 Email:",
-     "emailPlaceholder": "输入要查询或修改的用户的邮箱地址",
-     "queryRole": "查询角色",
-     "promptQuery": "输入邮箱并点击查询以查看或修改用户角色。",
-     "currentRoleLabel": "当前角色",
-     "setNewRole": "设置新角色",
-     "confirmAssign": "确认分配",
-     "assignSuccess": "角色分配成功！",
-     "assignSuccessDetail": "用户 {{userId}} 的新角色为 {{role}}。"
-   },
-   "roles": {
-     "general": "普通用户",
-     "admin": "管理员",
-     "super_admin": "超级管理员"
-   }
+  "errors": {
+    "initFailed": "页面加载初始化出错: {{msg}}",
+    "loginFailed": "登录失败: {{message}}",
+    "authCallbackFailed": "认证回调失败 (状态 {{status}})",
+    "loadRatingFailed": "加载评分失败 (状态 {{status}})",
+    "noRatingDataFound": "在 Session Storage 中未找到评分数据。",
+    "missingEssentialData": "评分数据不完整，无法显示报告。",
+    "pageLoadError": "页面加载出错",
+    "loadProfileListFailed": "加载配置列表失败: {{msg}}",
+    "loadProfileFailed": "加载配置 '{{id}}' 失败: {{msg}}",
+    "saveFailedNoMsg": "保存失败",
+    "notADraft": "该评分已保存，无法重复保存。",
+    "emptyConfig": "无法保存空的配置。",
+    "operationFailed": "操作失败: {{msg}}",
+    "cannotNameLatest": "不能将配置命名为 'latest'。",
+    "confirmDeleteProfile": "确定要删除配置方案 '{{id}}' 吗？",
+    "deleting": "删除中...",
+    "deleteSuccess": "配置方案 '{{id}}' 已删除。",
+    "deleteFailed": "删除失败: {{msg}}",
+    "emptyConfigDownload": "无法下载空的配置。",
+    "invalidJSONFormat": "上传的文件不是有效的配置 JSON。",
+    "fileParseFailed": "解析上传的文件失败: {{msg}}",
+    "invalidSessionData": "存储的评分数据格式无效。",
+    "permissionDenied": "权限不足。",
+    "permissionInsufficientSuperAdmin": "需要 Super Admin 权限才能访问此页面。您当前的权限是 {{role}}。",
+    "emailRequired": "请输入用户邮箱。",
+    "queryFailed": "查询失败",
+    "assignFailed": "分配角色失败。",
+    "notLoggedIn": "未登录",
+    "sessionExpiredGeneric": "会话已过期或无效。",
+    "requestFailed": "请求失败 (状态 {{status}})",
+    "sessionExpiredWrite": "会话已过期或无效，无法执行写入操作。",
+    "sessionExpiredRead": "会话已过期或无效 (状态 {{status}})，无法读取数据。",
+    "loginRequiredForPage": "需要登录才能访问此页面。",
+    "permissionDeniedAdmin": "权限不足，需要 Admin 或 Super Admin 权限。",
+    "permissionInsufficient": "权限不足。您当前的权限是 {{role}}。",
+    "noNarrativeData": "无法生成综合评价 (缺少数据)。",
+    "noSummaryData": "无法生成评分详情汇总 (缺少数据)。",
+    "scoreCalculationFailed": "分数计算失败，无法显示。",
+    "narrativeGenFailed": "无法生成综合评价 (分数计算失败)。"
+  },
+  "configPage": {
+    "pageTitle": "雪茄品鉴配置管理",
+    "description": "管理评分标准，所有更改在发布后将实时同步到主应用。",
+    "checkingAuth": "正在检查权限...",
+    "profileManagement": "配置方案管理",
+    "currentProfile": "当前加载:",
+    "selectProfile": "选择方案:",
+    "liveProfile": "Live (latest)",
+    "saveAs": "另存为",
+    "importExport": "导入 / 导出",
+    "uploadJSON": "从文件上传 (JSON):",
+    "uploadAndSave": "上传并另存为",
+    "downloadJSON": "下载当前配置 (JSON):",
+    "downloadEditorContent": "下载编辑器内容",
+    "appInfo": "应用基本信息",
+    "appTitle": "应用标题",
+    "appDescription": "应用描述",
+    "category": "类别",
+    "categoryName": "类别名称",
+    "criteria": "标准",
+    "addCriterion": "添加标准",
+    "weight": "权重",
+    "options": "选项",
+    "addOption": "添加选项",
+    "scorePct": "得分百分比",
+    "addCategory": "添加类别",
+    "saveChanges": "保存更改到方案",
+    "publishToLive": "发布到 Live (latest)",
+    "promptNewName": "请输入新配置方案的名称:",
+    "confirmDeleteProfile": "确定要删除配置方案 '{{id}}' 吗？",
+    "saveSuccess": "配置方案 '{{id}}' 保存成功。",
+    "deleteSuccess": "配置方案 '{{id}}' 已删除。",
+    "currentRole": "当前角色: {{role}}",
+    "jsonLoaded": "JSON 文件已加载到编辑器。请记得保存或发布。"
+  },
+  "rolePage": {
+    "pageTitle": "用户角色管理 - Super Admin",
+    "loadingAuth": "正在加载和验证身份...",
+    "title": "用户角色管理 (Super Admin)",
+    "currentUser": "当前用户: {{email}} ({{role}})",
+    "queryAndSet": "查询与设置用户角色",
+    "userEmail": "用户 Email:",
+    "emailPlaceholder": "输入要查询或修改的用户的邮箱地址",
+    "queryRole": "查询角色",
+    "promptQuery": "输入邮箱并点击查询以查看或修改用户角色。",
+    "currentRoleLabel": "当前角色",
+    "setNewRole": "设置新角色",
+    "confirmAssign": "确认分配",
+    "assignSuccess": "角色分配成功！",
+    "assignSuccessDetail": "用户 {{userId}} 的新角色为 {{role}}。"
+  },
+  "roles": {
+    "general": "普通用户",
+    "admin": "管理员",
+    "super_admin": "超级管理员"
+  },
+  "config": {
+    "description": {
+      "v1_1": "V1.1"
+    }
+  },
+  "criteria": {
+    "appearanceAndConstruction": {
+      "title": "1. 外观与卷工",
+      "detail": "雪茄的物理制造质量。",
+      "bandAesthetics": "茄标美感",
+      "wrapperAppearance": "茄衣呈现",
+      "rollVisual": "卷工目测"
+    },
+    "burnAndDraw": {
+      "title": "2. 燃烧与气道",
+      "detail": "决定品鉴过程是否顺畅愉快的核心要素。",
+      "drawResistance": "吸阻",
+      "ashColor": "烟灰颜色",
+      "ashStructure": "烟灰形态",
+      "burnLine": "燃烧线",
+      "burnConsistency": "燃烧持续"
+    },
+    "flavorAndFeel": {
+      "title": "味觉和感受",
+      "detail": "香气，变化，尼古丁等味觉感受",
+      "firstImpressions": "前三口感受",
+      "secondaryAromaIntensity": "宜人的第二香气强度（不算咖啡、皮革、辛辣。主要为花香、香料、奶香、甜香等）",
+      "secondaryAromaUniqueness": "第二香气在其他雪茄中获得难度或高级度",
+      "secondaryAromaDuration": "第二香气持续度",
+      "tertiaryAromaPresence": "多重（第三）香气",
+      "tertiaryAromaDuration": "多重（第三）香气持续度",
+      "transitions": "三段变化",
+      "smokeVolume": "烟雾量",
+      "nicotineStrength": "尼古丁浓度",
+      "retrohaleSmoothness": "过鼻顺畅度"
+    },
+    "willingnessAndImpression": {
+      "title": "意愿与感受",
+      "detail": "",
+      "finishDesire": "抽完烟屁股意愿",
+      "rebuyIntention": "复购意愿",
+      "memorability": "记忆度",
+      "smokingTime": "抽吸时间",
+      "recommendation": "推荐指数"
+    },
+    "newCategory": {
+      "title": "新类别",
+      "detail": "新类别的描述",
+      "newItem": "新评分项"
+    },
+    "newCriterion": {
+      "name": "新标准"
+    }
+  },
+  "options": {
+    "common": {
+      "average": "中规中矩",
+      "perfect": "完美",
+      "normal": "正常",
+      "new": "新选项"
+    },
+    "appearance": {
+      "shoddy": "简陋",
+      "beautiful": "漂亮"
+    },
+    "construction": {
+      "fail": "不合格"
+    },
+    "draw": {
+      "loose": "松",
+      "tight": "偏紧",
+      "plugged": "堵塞"
+    },
+    "ashColor": {
+      "white": "白",
+      "gray": "灰",
+      "black": "黑"
+    },
+    "ashStructure": {
+      "perfectHold": "完美到可以尝试持灰",
+      "needsTapping": "需要主动弹灰",
+      "fallsOff": "自动脱落"
+    },
+    "burnLine": {
+      "even": "均匀",
+      "correctsItself": "略有斜烧但是可以自己回正",
+      "needsCorrection": "有斜烧需要补几次火",
+      "constantCorrection": "需要不断修正"
+    },
+    "burnConsistency": {
+      "perfect": "一根到底",
+      "occasionalRelight": "偶尔补火",
+      "frequentRelight": "不断补火",
+      "gaveUp": "补到放弃"
+    },
+    "impression": {
+      "excellent": "眼前一亮",
+      "promising": "有期待",
+      "poor": "估计不怎么样"
+    },
+    "aroma": {
+      "none": "没有",
+      "light": "一点点香",
+      "medium": "香",
+      "strong": "很香",
+      "veryStrong": "极香"
+    },
+    "uniqueness": {
+      "common": "容易在其他雪茄获得",
+      "uncommon": "不容易但偶有获得",
+      "rare": "独特风味很少获得",
+      "none": "没有第二香气"
+    },
+    "duration": {
+      "oneThird": "三段中仅一段有",
+      "twoThirds": "三段中有二段有",
+      "full": "三段都有",
+      "none": "三段都没有"
+    },
+    "presence": {
+      "yes": "有"
+    },
+    "tertiaryDuration": {
+      "oneThird": "三段仅一段有",
+      "twoThirds": "三段有二段有"
+    },
+    "transition": {
+      "obvious": "变化明显",
+      "subtle": "似乎有变化",
+      "consistent": "始终如一"
+    },
+    "smoke": {
+      "low": "少",
+      "medium": "多",
+      "high": "烟囱"
+    },
+    "nicotine": {
+      "normal": "普通",
+      "strong": "噩梦",
+      "veryStrong": "地狱"
+    },
+    "retrohale": {
+      "smooth": "柔顺",
+      "slightIrritation": "略有刺激",
+      "harsh": "辛辣不能过鼻"
+    },
+    "finish": {
+      "early": "尽早掐灭",
+      "normal": "抽到本人日常处",
+      "nubbed": "抽到烧手",
+      "toothpick": "插牙签抽完"
+    },
+    "rebuy": {
+      "tooExpensive": "买不起",
+      "no": "不愿复购",
+      "yes": "愿意复购",
+      "notWorthIt": "不值得"
+    },
+    "memory": {
+      "forgettable": "芸芸众生",
+      "slightImpression": "略有印象",
+      "memorable": "念念不忘",
+      "unforgettable": "梦里寻他千百度"
+    },
+    "time": {
+      "under30": "30min以内",
+      "30to60": "30-60min",
+      "60to90": "60-90min",
+      "90to120": "90-120min",
+      "over120": "120min以上"
+    },
+    "recommend": {
+      "notListed": "不在list",
+      "mention": "偶尔提提",
+      "consider": "可以有",
+      "strong": "强推",
+      "mustHave": "必须有"
+    }
+  }
 }
