--- a/locales/es.json
+++ b/locales/es.json
@@ -27,7 +27,41 @@
     "pin": "Fijar",
     "unpin": "Desfijar",
     "image": "Imagen",
-    "cover": "Portada"
+    "cover": "Portada",
+    "loadingDetails": "Cargando detalles de la calificación...",
+    "noImage": "Sin Imagen",
+    "cigarImageAlt": "Imagen del Puro",
+    "copied": "¡Copiado!",
+    "copyFailed": "Copia fallida",
+    "saving": "Guardando...",
+    "loadingOptions": "Cargando opciones...",
+    "backToHome": "Volver a Inicio",
+    "backToHomeAndLogin": "Volver a Inicio e Iniciar Sesión",
+    "waitingInit": "Esperando inicialización...",
+    "querying": "Consultando...",
+    "assigningRole": "Asignando rol...",
+    "deleting": "Eliminando...",
+    "processing": "Procesando...",
+    "backToCommunity": "Volver a Comunidad",
+    "unknown": "Desconocido",
+    "noTitle": "Sin Título",
+    "noReview": "No se proporcionó reseña escrita.",
+    "invalidDate": "Fecha inválida",
+    "unknownDate": "Fecha desconocida",
+    "by": "por",
+    "noPublicRatings": "Aún no hay calificaciones públicas.",
+    "noMatch": "No se encontraron coincidencias.",
+    "deleteCategory": "Eliminar Categoría",
+    "description": "Descripción:",
+    "name": "Nombre:",
+    "deleteOption": "Eliminar Opción",
+    "average": "Promedio",
+    "perfect": "Perfecto",
+    "normal": "Normal",
+    "new": "Nuevo",
+    "sessionExpiredWrite": "Sesión expirada o inválida, no se puede realizar operación de escritura.",
+    "sessionExpiredRead": "Sesión expirada o inválida (estado {{status}}), no se pueden leer datos.",
+    "unrated": "Sin Calificar"
   },
   "nav": {
     "title": "Pistacho Calificación",
@@ -39,7 +73,7 @@
     "logout": "Cerrar Sesión",
     "configAdmin": "Config. de Calificación",
     "userAdmin": "Admin. de Usuarios",
-    "nav.configAdmin": "Config. de Calificación"
+    "loggedIn": "Sesión iniciada"
   },
   "indexPage": {
     "searchPlaceholder": "Buscar nombre, origen, tamaño, reseña, usuario...",
@@ -99,7 +133,8 @@
     "nameRequired": "Por favor, introduce el nombre del puro.",
     "loadingEdit": "Cargando reseña {{id}}...",
     "editLoadFailed": "Error al cargar reseña: {{msg}}",
-    "editLoaded": "Reseña {{id}} cargada (Modo Edición)"
+    "editLoaded": "Reseña {{id}} cargada (Modo Edición)",
+    "setCover": "Establecer como Portada"
   },
   "historyPage": {
     "title": "Mis Reseñas",
@@ -128,7 +163,7 @@
     "sessionStoreFailed": "No se pudo guardar la sesión para ver detalles."
   },
   "resultsPage": {
-    "title": "Cata de Puro - Reporte",
+    "pageTitle": "Cata de Puro - Reporte",
     "by": "Reseña por:",
     "loading": "Cargando...",
     "size": "Tamaño",
@@ -163,10 +198,11 @@
       "part3": "Los sabores principales percibidos incluyeron: <strong class=\"font-semibold\">{{flavors}}</strong>.",
       "part4": "En general, basado en el Sistema de Calificación de Puros Pistacho, el grado final es <strong class=\"font-semibold text-indigo-600\">\"{{grade}} - {{gradeName}}\"</strong>. La escala de calificación de Pistacho (de mayor a menor) es {{hierarchy}}.",
       "noObservations": "(No se registraron opciones de calificación detalladas)",
-      "noData": "No se pudo generar resumen narrativo (faltan datos originales)."
+      "observation": "{{criterion}}: {{option}}",
+      "noNarrativeData": "No se pudo generar resumen narrativo (faltan datos)."
     },
     "summary": {
-      "noData": "No se pudo generar detalles de calificación (faltan datos originales).",
+      "noSummaryData": "No se pudo generar detalles de calificación (faltan datos).",
       "noItems": "(Sin items de calificación)"
     },
     "shareCard": {
@@ -175,8 +211,277 @@
       "qrError": "Contenedor o librería de QRCode no encontrado, o falta ratingId.",
       "generating": "Auto-generando imagen para compartir...",
       "generateFailed": "Error al auto-generar o añadir imagen para compartir:",
-      "shareImage": "Imagen para Compartir",
-      "shareThumb": "Miniatura"
-    }
-  }
+      "shareImageAlt": "Imagen para Compartir",
+      "shareThumb": "Miniatura para Compartir"
+    },
+    "scoreCalculationFailed": "Cálculo de puntaje fallido, no se puede mostrar.",
+    "narrativeGenFailed": "No se puede generar resumen narrativo (cálculo de puntaje fallido)."
+  },
+   "errors": {
+      "initFailed": "Falló la inicialización de carga de página: {{msg}}",
+      "loginFailed": "Inicio de sesión fallido: {{message}}",
+      "authCallbackFailed": "Falló la devolución de llamada de autenticación (estado {{status}})",
+      "loadRatingFailed": "Falló la carga de calificación (estado {{status}})",
+      "noRatingDataFound": "No se encontraron datos de calificación en Session Storage.",
+      "missingEssentialData": "Datos de calificación incompletos, no se puede mostrar el reporte.",
+      "pageLoadError": "Error de Carga de Página",
+      "loadProfileListFailed": "Falló la carga de lista de perfiles: {{msg}}",
+      "loadProfileFailed": "Falló la carga del perfil '{{id}}': {{msg}}",
+      "saveFailedNoMsg": "Guardado fallido",
+      "notADraft": "Esta calificación ya ha sido guardada y no puede guardarse de nuevo.",
+      "emptyConfig": "No se puede guardar configuración vacía.",
+      "operationFailed": "Operación fallida: {{msg}}",
+      "cannotNameLatest": "No se puede nombrar la configuración 'latest'.",
+      "confirmDeleteProfile": "¿Estás seguro de que quieres eliminar el perfil '{{id}}'?",
+      "deleting": "Eliminando...",
+      "deleteSuccess": "Perfil '{{id}}' eliminado.",
+      "deleteFailed": "Eliminación fallida: {{msg}}",
+      "emptyConfigDownload": "No se puede descargar configuración vacía.",
+      "invalidJSONFormat": "Archivo subido no es un JSON de configuración válido.",
+      "fileParseFailed": "Falló el análisis del archivo subido: {{msg}}",
+      "invalidSessionData": "Formato de datos de calificación almacenado inválido.",
+      "permissionDenied": "Permiso denegado.",
+      "permissionInsufficientSuperAdmin": "Se requiere permiso de Super Admin para acceder a esta página. Tu permiso actual es {{role}}.",
+      "emailRequired": "Por favor introduce el email del usuario.",
+      "queryFailed": "Consulta fallida",
+      "assignFailed": "Asignación de rol fallida.",
+      "notLoggedIn": "No has iniciado sesión",
+      "sessionExpiredGeneric": "Sesión expirada o inválida.",
+      "requestFailed": "Solicitud fallida (estado {{status}})",
+      "loginRequiredForPage": "Se requiere inicio de sesión para acceder a esta página.",
+      "permissionDeniedAdmin": "Permiso denegado, se requiere rol de Admin o Super Admin.",
+      "permissionInsufficient": "Permiso insuficiente. Tu permiso actual es {{role}}.",
+      "noNarrativeData": "No se puede generar resumen narrativo (faltan datos).",
+      "noSummaryData": "No se pueden generar detalles de calificación (faltan datos).",
+      "fatalError": "Error Fatal",
+      "error": "Error"
+   },
+   "configPage": {
+     "title": "Gestión de Configuración de Cata de Puros",
+     "description": "Gestiona los estándares de calificación. Los cambios se sincronizarán con la app principal en vivo después de publicar.",
+     "checkingAuth": "Verificando permisos...",
+     "profileManagement": "Gestión de Perfiles de Configuración",
+     "currentProfile": "Cargado Actualmente:",
+     "selectProfile": "Seleccionar Perfil:",
+     "liveProfile": "En Vivo (latest)",
+     "saveAs": "Guardar Como",
+     "importExport": "Importar / Exportar",
+     "uploadJSON": "Subir desde Archivo (JSON):",
+     "uploadAndSave": "Subir y Guardar Como",
+     "downloadJSON": "Descargar Config. Actual (JSON):",
+     "downloadEditorContent": "Descargar Contenido del Editor",
+     "appInfo": "Información Básica de la Aplicación",
+     "appTitle": "Título de la Aplicación",
+     "appDescription": "Descripción de la Aplicación",
+     "category": "Categoría",
+     "categoryName": "Nombre de Categoría:",
+     "criteria": "Criterios:",
+     "addCriterion": "Añadir Criterio",
+     "weight": "Peso:",
+     "options": "Opciones:",
+     "addOption": "Añadir Opción",
+     "scorePct": "% Puntaje:",
+     "addCategory": "Añadir Categoría",
+     "saveChanges": "Guardar Cambios en Perfil",
+     "publishToLive": "Publicar a En Vivo (latest)",
+     "promptNewName": "Introduce el nombre para el nuevo perfil de configuración:",
+     "confirmDeleteProfile": "¿Estás seguro de que quieres eliminar el perfil '{{id}}'?",
+     "saveSuccess": "Perfil de configuración '{{id}}' guardado con éxito.",
+     "deleteSuccess": "Perfil de configuración '{{id}}' eliminado.",
+     "currentRole": "Rol Actual: {{role}}",
+     "jsonLoaded": "Archivo JSON cargado en el editor. Recuerda Guardar o Publicar.",
+     "criterion": "Criterio"
+   },
+   "rolePage": {
+     "pageTitle": "Gestión de Roles de Usuario - Super Admin",
+     "loadingAuth": "Cargando y verificando identidad...",
+     "title": "Gestión de Roles de Usuario (Super Admin)",
+     "currentUser": "Usuario Actual: {{email}} ({{role}})",
+     "queryAndSet": "Consultar y Establecer Rol de Usuario",
+     "userEmail": "Email de Usuario:",
+     "emailPlaceholder": "Introduce el email del usuario a consultar o modificar",
+     "queryRole": "Consultar Rol",
+     "promptQuery": "Introduce email y haz clic en Consultar para ver o modificar el rol del usuario.",
+     "currentRoleLabel": "Rol Actual:",
+     "setNewRole": "Establecer Nuevo Rol:",
+     "confirmAssign": "Confirmar Asignación",
+     "assignSuccess": "¡Rol asignado con éxito!",
+     "assignSuccessDetail": "El nuevo rol del usuario {{userId}} es {{role}}."
+   },
+   "roles": {
+     "general": "Usuario General",
+     "admin": "Administrador",
+     "super_admin": "Super Administrador"
+   },
+   "criteria": {
+      "appearanceAndConstruction": {
+         "title": "1. Apariencia y Construcción",
+         "detail": "La calidad física de fabricación del puro.",
+         "bandAesthetics": "Estética de la Anilla",
+         "wrapperAppearance": "Apariencia de la Capa",
+         "rollVisual": "Inspección Visual del Rolado"
+      },
+      "burnAndDraw": {
+         "title": "2. Combustión y Tiro",
+         "detail": "Elementos centrales que determinan si la experiencia de cata es fluida y agradable.",
+         "drawResistance": "Resistencia al Tiro",
+         "ashColor": "Color de la Ceniza",
+         "ashStructure": "Estructura de la Ceniza",
+         "burnLine": "Línea de Combustión",
+         "burnConsistency": "Consistencia de la Combustión"
+      },
+      "flavorAndFeel": {
+         "title": "Sabor y Sensación",
+         "detail": "Sensaciones gustativas como aroma, complejidad, nicotina, etc.",
+         "firstImpressions": "Impresión de las Primeras Tres Caladas",
+         "secondaryAromaIntensity": "Intensidad del Aroma Secundario Agradable (excluyendo café, cuero, especias; principalmente floral, especias, cremoso, dulce, etc.)",
+         "secondaryAromaUniqueness": "Dificultad o Exclusividad para Obtener el Aroma Secundario en Otros Puros",
+         "secondaryAromaDuration": "Duración del Aroma Secundario",
+         "tertiaryAromaPresence": "Presencia de Aromas Múltiples (Terciarios)",
+         "tertiaryAromaDuration": "Duración de Aromas Múltiples (Terciarios)",
+         "transitions": "Transiciones a Través de los Tercios",
+         "smokeVolume": "Volumen de Humo",
+         "nicotineStrength": "Fortaleza de Nicotina",
+         "retrohaleSmoothness": "Suavidad en Retronasal"
+      },
+      "willingnessAndImpression": {
+         "title": "Disposición e Impresión",
+         "detail": "",
+         "finishDesire": "Deseo de Terminar la Colilla",
+         "rebuyIntention": "Intención de Recompra",
+         "memorability": "Memorabilidad",
+         "smokingTime": "Tiempo de Fumada",
+         "recommendation": "Índice de Recomendación"
+      },
+      "newCategory": {
+        "title": "Nueva Categoría",
+        "detail": "Detalles sobre la nueva categoría.",
+        "newItem": "Nuevo Criterio"
+      },
+       "newCriterion": {
+         "name": "Nombre del Nuevo Criterio"
+       }
+   },
+   "options": {
+      "appearance": {
+         "shoddy": "Mediocre",
+         "beautiful": "Bonita"
+      },
+      "construction": {
+         "fail": "Fallo"
+      },
+      "draw": {
+         "loose": "Suelto",
+         "tight": "Apretado",
+         "plugged": "Tapado"
+      },
+      "ashColor": {
+         "white": "Blanca",
+         "gray": "Gris",
+         "black": "Negra"
+      },
+      "ashStructure": {
+         "perfectHold": "Perfecta, se puede intentar aguantar",
+         "needsTapping": "Necesita golpe activo",
+         "fallsOff": "Se cae automáticamente"
+      },
+      "burnLine": {
+         "even": "Uniforme",
+         "correctsItself": "Ligeramente desigual pero se autocorrige",
+         "needsCorrection": "Desigual, necesita varias correcciones",
+         "constantCorrection": "Necesita corrección constante"
+      },
+      "burnConsistency": {
+         "perfect": "Combustión perfecta de principio a fin",
+         "occasionalRelight": "Necesita reencendido ocasional",
+         "frequentRelight": "Necesita reencendido frecuente",
+         "gaveUp": "Se rindió al reencender"
+      },
+      "impression": {
+         "excellent": "Impresionante",
+         "promising": "Prometedor",
+         "poor": "Probablemente pobre"
+      },
+      "aroma": {
+         "none": "Ninguno",
+         "light": "Ligero",
+         "medium": "Medio",
+         "strong": "Fuerte",
+         "veryStrong": "Muy Fuerte"
+      },
+      "uniqueness": {
+         "common": "Fácil de encontrar en otros puros",
+         "uncommon": "No fácil pero se encuentra ocasionalmente",
+         "rare": "Sabor único raramente encontrado",
+         "none": "Sin aroma secundario"
+      },
+      "duration": {
+         "oneThird": "Solo en un tercio",
+         "twoThirds": "En dos tercios",
+         "full": "A lo largo de los tres tercios",
+         "none": "Ninguno en ningún tercio"
+      },
+      "presence": {
+         "yes": "Sí",
+         "no": "No"
+      },
+      "tertiaryDuration": {
+          "oneThird": "Solo en un tercio",
+          "twoThirds": "En dos tercios",
+          "full": "A lo largo de los tres tercios",
+          "none": "Ninguno en ningún tercio"
+      },
+      "transition": {
+         "obvious": "Transiciones obvias",
+         "subtle": "Transiciones sutiles",
+         "consistent": "Consistente en todo momento"
+      },
+      "smoke": {
+         "low": "Bajo",
+         "medium": "Medio",
+         "high": "Alto ('Chimenea')"
+      },
+      "nicotine": {
+         "normal": "Normal",
+         "strong": "Fuerte ('Pesadilla')",
+         "veryStrong": "Muy Fuerte ('Infierno')"
+      },
+      "retrohale": {
+         "smooth": "Suave",
+         "slightIrritation": "Ligera irritación",
+         "harsh": "Áspero, no se puede retronasal"
+      },
+      "finish": {
+         "early": "Apagar temprano",
+         "normal": "Fumar hasta el punto habitual",
+         "nubbed": "Fumar hasta quemarse los dedos",
+         "toothpick": "Terminar con un palillo"
+      },
+      "rebuy": {
+         "tooExpensive": "Inasequible",
+         "no": "No recompraría",
+         "yes": "Recompraría",
+         "notWorthIt": "No vale la pena"
+      },
+      "memory": {
+         "forgettable": "Olvidable",
+         "slightImpression": "Ligera impresión",
+         "memorable": "Memorable",
+         "unforgettable": "Inolvidable"
+      },
+      "time": {
+         "under30": "Menos de 30min",
+         "30to60": "30-60min",
+         "60to90": "60-90min",
+         "90to120": "90-120min",
+         "over120": "Más de 120min"
+      },
+      "recommend": {
+         "notListed": "No en la lista",
+         "mention": "Mencionar ocasionalmente",
+         "consider": "Se puede considerar",
+         "strong": "Recomendar encarecidamente",
+         "mustHave": "Imprescindible"
+      }
+   }
 }
