Revamp shared navbar for responsive consistency

--- a/locales/en.json
+++ b/locales/en.json
@@ -67,6 +67,7 @@
   },
   "nav": {
     "title": "Pistacho Rating",
+    "subtitle": "The global cigar lovers community",
     "community": "Community Feed",
     "rate": "Rate a Cigar",
     "myRatings": "My Ratings",
