--- a/locales/es.json
+++ b/locales/es.json
@@ -67,6 +67,7 @@
   },
   "nav": {
     "title": "Pistacho Calificación",
+    "subtitle": "La comunidad global para amantes del puro",
     "community": "Comunidad",
     "rate": "Calificar Puro",
     "myRatings": "Mis Reseñas",
