--- a/locales/zh.json
+++ b/locales/zh.json
@@ -62,6 +62,7 @@
   },
   "nav": {
     "title": "Pistacho评分",
+    "subtitle": "雪茄爱好者的全球评分社区",
     "community": "社区动态",
     "rate": "去评分",
     "myRatings": "我的评分",
