Add community comments and participation history

--- a/locales/es.json
+++ b/locales/es.json
@@ -150,7 +150,13 @@
     "unknownDate": "Fecha Desconocida",
     "unknownUser": "Usuario Desconocido",
     "unrated": "Sin Calificar",
-    "userLabel": "Usuario:"
+    "userLabel": "Usuario:",
+    "commentHistoryTitle": "Reseñas que he comentado",
+    "noCommentHistory": "Aún no has comentado en otras reseñas.",
+    "commentHistoryError": "No se pudieron cargar tus comentarios: {{msg}}",
+    "commentPreviewLabel": "Mi comentario",
+    "viewRating": "Ver reseña",
+    "gradeShortLabel": "Calificación"
   },
   "certifiedPage": {
     "title": "Reseñas Certificadas Pistacho",
@@ -185,6 +191,27 @@
     "goToRate": "Ir a Calificar",
     "loadErrorMsg": "¡No se encontraron datos de calificación! Por favor intenta de nuevo.",
     "loadErrorMissing": "Los datos de la reseña guardada carecen de información esencial (puntaje, grado, info. del puro). Por favor, intenta calificar de nuevo.",
+    "comments": {
+      "title": "Comentarios de la comunidad",
+      "loginPrompt": "Inicia sesión para publicar un comentario.",
+      "muted": "Has sido silenciado y no puedes publicar comentarios.",
+      "placeholder": "Comparte tus ideas...",
+      "submit": "Publicar comentario",
+      "empty": "Aún no hay comentarios; ¡sé el primero en compartir!",
+      "count": "{{count}} comentario(s)",
+      "mutedBadge": "Silenciado",
+      "mute": "Silenciar",
+      "unmute": "Quitar silencio",
+      "validation": "El contenido del comentario no puede estar vacío.",
+      "loadFailed": "Error al cargar los comentarios: {{msg}}",
+      "postSuccess": "Comentario publicado.",
+      "postFailed": "No se pudo enviar el comentario: {{msg}}",
+      "muteConfirm": "¿Silenciar a {{user}}?",
+      "unmuteConfirm": "¿Quitar el silencio a {{user}}?",
+      "muteSuccess": "Estado de silencio actualizado.",
+      "unmuteSuccess": "Silencio eliminado.",
+      "muteFailed": "No se pudo actualizar el estado de silencio: {{msg}}"
+    },
     "grade": {
       "P": "Pináculo",
       "I": "Impecable",
