--- a/locales/zh.json
+++ b/locales/zh.json
@@ -60,6 +60,13 @@
     "unrated": "未评级",
     "unnamedCigar": "未命名雪茄"
   },
+  "seo": {
+    "description": "Pistacho 雪茄评分社区提供精选的雪茄点评、评分与认证内容，帮助雪茄爱好者分享与发现卓越体验。",
+    "keywords": "Pistacho, 雪茄评分, 雪茄社区, 雪茄认证, 雪茄点评",
+    "ogTitle": "Pistacho 评分社区",
+    "ogDescription": "加入 Pistacho 雪茄评分社区，获取精选雪茄点评与认证记录，发现下一支必试雪茄。",
+    "locale": "zh_CN"
+  },
   "nav": {
     "title": "Pistacho评分",
     "subtitle": "雪茄爱好者的全球评分社区",
