Add multilingual tobacco warning to home footer

--- a/locales/en.json
+++ b/locales/en.json
@@ -94,7 +94,8 @@
     "loadingRatings": "Loading reviews...",
     "loadFailed": "Failed to load reviews: {{msg}}",
     "noMatches": "No matching reviews found.",
-    "uncertify": "Uncertify"
+    "uncertify": "Uncertify",
+    "smokingWarning": "Smoking and excessive drinking are harmful to your health. This site contains tobacco and alcohol content; minors should refrain."
   },
   "ratePage": {
     "title": "Post a Cigar Review",
