Update SEO descriptions to highlight community participation

--- a/locales/en.json
+++ b/locales/en.json
@@ -66,10 +66,10 @@
     "score": "Score"
   },
   "seo": {
-    "description": "The Pistacho cigar rating community curates standout cigar reviews, ratings, and certifications so aficionados can share and discover exceptional experiences.",
+    "description": "The Pistacho cigar rating community unites enthusiasts with authentic scores, expert reviews, and certification badges to uncover cigars worth savoring—and every member is invited to rate and share.",
     "keywords": "Pistacho, cigar ratings, cigar community, cigar certification, cigar reviews",
     "ogTitle": "Pistacho Rating Community",
-    "ogDescription": "Join the Pistacho cigar rating community to discover curated reviews and certification records for your next must-try cigar.",
+    "ogDescription": "Join the Pistacho cigar rating community to explore authentic scores, expert reviews, and certification badges that reveal cigars worth savoring, with every member invited to rate and share.",
     "locale": "en_US"
   },
   "nav": {
