--- a/locales/zh.json
+++ b/locales/zh.json
@@ -61,10 +61,10 @@
     "unnamedCigar": "未命名雪茄"
   },
   "seo": {
-    "description": "Pistacho 雪茄评分社区提供精选的雪茄点评、评分与认证内容，帮助雪茄爱好者分享与发现卓越体验。",
+    "description": "Pistacho 雪茄评分社区汇聚全球爱好者，以真实评分、专业点评与认证体系，发掘值得珍藏的每一支雪茄，并欢迎每位用户参与评分分享。",
     "keywords": "Pistacho, 雪茄评分, 雪茄社区, 雪茄认证, 雪茄点评",
     "ogTitle": "Pistacho 评分社区",
-    "ogDescription": "加入 Pistacho 雪茄评分社区，获取精选雪茄点评与认证记录，发现下一支必试雪茄。",
+    "ogDescription": "加入 Pistacho 雪茄评分社区，与全球爱好者一起通过真实评分、专业点评与认证体系发掘值得珍藏的雪茄，每位用户都可参与评分分享。",
     "locale": "zh_CN"
   },
   "nav": {
