--- a/locales/en.json
+++ b/locales/en.json
@@ -107,7 +107,7 @@
     "currentScore": "Current Score",
     "itemsRated": "Items Rated",
     "ratingTitle": "Review Title",
-    "ratingTitlePlaceholder": "A title gets more views (Max 22 chars)",
+    "ratingTitlePlaceholder": "A title gets more views (Max 35 chars)",
     "uploadImages": "Upload Images (Max {{max}}, drag to sort)",
     "uploadImagesDesc": "The first image will be the cover. Click the button on an image to set it as cover.",
     "selectImages": "Select Images",
@@ -191,6 +191,7 @@
     "commentHistoryError": "Failed to load your comment activity: {{msg}}",
     "commentPreviewLabel": "My comment",
     "viewRating": "View Review",
+    "newCommentBadge": "New comment",
     "gradeShortLabel": "Grade"
   },
   "certifiedPage": {
